<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.uts.homelab.view.fragment.user.appointment.AppointmentUserFragment"
        android:label="@string/title_appointment"
        tools:layout="@layout/fragment_option">
        <action
            android:id="@+id/action_navigation_home_to_appointmentUserSecondScreenFragment"
            app:destination="@id/appointmentUserSecondScreenFragment">
        </action>
        <action
            android:id="@+id/action_navigation_home_to_userDataFragment"
            app:destination="@id/userDataFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_resultUserFragment"
            app:destination="@id/resultUserFragment" />
        <action
            android:id="@+id/action_navigation_home_to_processAppointmentFragment"
            app:destination="@id/processAppointmentFragment" />
        <action
            android:id="@+id/action_navigation_home_to_processSecondAppointmentFragment"
            app:destination="@id/processSecondAppointmentFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.uts.homelab.view.fragment.user.history.HistoryUserFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.uts.homelab.view.fragment.user.profile.ProfileUserFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >

        <argument
            android:name="userModel"
            app:argType="com.uts.homelab.network.dataclass.UserRegister" />
        <action
            android:id="@+id/action_navigation_notifications_to_addressFragment"
            app:destination="@id/addressFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_dataUserProfileFragment"
            app:destination="@id/dataUserProfileFragment" />

    </fragment>
    <fragment
        android:id="@+id/appointmentUserSecondScreenFragment"
        android:name="com.uts.homelab.view.fragment.user.appointment.AppointmentUserSecondScreenFragment"
        android:label="@string/title_appointment"
        tools:layout="@layout/fragment_appointment_user_second_screen"
        >
        <action
            android:id="@+id/action_appointmentUserSecondScreenFragment_to_addressFragment"
            app:destination="@id/addressFragment" >

        </action>
    </fragment>
    <fragment
        android:id="@+id/userDataFragment"
        android:name="com.uts.homelab.view.fragment.user.UserDataFragment"
        android:label="fragment_user_data"
        tools:layout="@layout/fragment_user_data" >
        <argument
            android:name="userModel"
            app:argType="com.uts.homelab.network.dataclass.UserRegister" />
        <action
            android:id="@+id/action_userDataFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.uts.homelab.view.fragment.user.AddressFragment"
        android:label="AddressFragment" >
        <action
            android:id="@+id/action_addressFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_home"
             />

        <argument
            android:name="appointmentModel"
            app:argType="com.uts.homelab.network.dataclass.AppointmentUserModel" />
        <action
            android:id="@+id/action_addressFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/resultUserFragment"
        android:name="com.uts.homelab.view.fragment.user.ResultUserFragment"
        android:label="fragment_result_user"
        tools:layout="@layout/fragment_result_user" />
    <fragment
        android:id="@+id/dataUserProfileFragment"
        android:name="com.uts.homelab.view.fragment.user.profile.DataUserProfileFragment"
        android:label="fragment_data_user_profile"
        tools:layout="@layout/fragment_data_user_profile" />
    <fragment
        android:id="@+id/processAppointmentFragment"
        android:name="com.uts.homelab.view.fragment.user.processappointment.ProcessAppointmentFragment"
        android:label="fragment_process_appointment"
        tools:layout="@layout/fragment_process_appointment" >

        <argument
            android:name="appointmentModel"
            app:argType="com.uts.homelab.network.dataclass.AppointmentUserModel" />
        <argument
            android:name="typeUser"
            app:argType="string" />
        <action
            android:id="@+id/action_processAppointmentFragment_to_processSecondAppointmentFragment"
            app:destination="@id/processSecondAppointmentFragment" />

    </fragment>
    <fragment
        android:id="@+id/processSecondAppointmentFragment"
        android:name="com.uts.homelab.view.fragment.user.processappointment.ProcessSecondAppointmentFragment"
        android:label="fragment_process_second_appointment"
        tools:layout="@layout/fragment_process_second_appointment" >

        <argument
            android:name="typeUser"
            app:argType="string" />
        <argument
            android:name="appointmentModel"
            app:argType="com.uts.homelab.network.dataclass.AppointmentUserModel" />
        <action
            android:id="@+id/action_processSecondAppointmentFragment_to_navigation_init"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"
            app:destination="@id/navigation_home" />

    </fragment>
</navigation>